--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -92,7 +92,7 @@ jobs:
       run: |
         helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
         kubectl get namespace ingress-nginx || kubectl create namespace ingress-nginx
-        helm install ingress-nginx ingress-nginx/ingress-nginx -n ingress-nginx
+        helm upgrade --install ingress-nginx ingress-nginx/ingress-nginx -n ingress-nginx --create-namespace
         
     - name: Configure Cluster Issuer. This will help to generate Certificate for us
       run: |
